--- a/StoreFront3.0.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/Shared/_Layout.cshtml
@@ -38,18 +38,17 @@
                     <li class="nav-item"><a href="@Url.Action("Index", "Home")" class="nav-link">Home</a></li>
                     <li class="nav-item">
                         <a href="@Url.Action("Shop", "Home")" class="nav-link">Shop</a>
-                        @*<li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="shop.html">Shop</a>
-                                @*<a class="dropdown-item" href="wishlist.html">Wishlist</a>*@
-                        @*<a class="dropdown-item" href="product-single.html">Single Product</a>
-                            <a class="dropdown-item" href="cart.html">Cart</a>
-                            <a class="dropdown-item" href="checkout.html">Checkout</a>*@
-                        @*</div>*@
-                    </li>
+                    </li>                   
                     <li class="nav-item"><a href="@Url.Action("About", "Home")" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="@Url.Action("Contact", "Home")" class="nav-link">Contact</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <div class="dropdown-item">
+                                @Html.Partial("_LoginPartial")
+                            </div>
+                        </div>
+                    </li>
                     <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
                 </ul>
             </div>
