--- a/StoreFront3.0.UI.MVC/Views/Account/Register.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/Account/Register.cshtml
@@ -11,6 +11,31 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+
+    @*WE ADDED THE FOLLOWING THREE LABELS/INPUTS FOR CUSTOM USER DETAIL INFORMATION*@
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.FavoriteColor, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @* Added the type="color" attribute to convert this input to a color picker *@
+            @Html.TextBoxFor(m => m.FavoriteColor, new { @class = "form-control", type = "color" })
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
