--- a/StoreFront3.0.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/Shared/_Layout.cshtml
@@ -49,6 +49,10 @@
                             </div>
                         </div>
                     </li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item"><a href="@Url.Action("Index", "Products") class="nav-link">Products</a></li>
+                    }
                     <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
                 </ul>
             </div>
