--- a/StoreFront3.0.UI.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,21 +1,49 @@
 ﻿@using Microsoft.AspNet.Identity
+@using StoreFront.DATA.EF
+
+@{
+    int location = User.Identity.GetUserName().IndexOf("@");
+}
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-    @Html.AntiForgeryToken()
+    @*Custom User Details*@
+    /*
+     * Anytime we need UserDetails record for a user
+     *  -Add using Microsoft.AspNet.Identity
+     *  - User.Identity.GetUserId()
+     *  - Use LINQ to find the matching UserDetail record for that ID
+     */
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+    DCAccessoriesEntities db = new DCAccessoriesEntities();
+    string userID = User.Identity.GetUserId();
+    UserDetail currentUser = db.UserDetails.Where(ud => ud.UserID == userID).FirstOrDefault();
+    string userFN = "Guest"; //Default to something in case no match is found for the UserDetail object
+    string faveColor = "#cccccc";
+
+    if (currentUser != null)
+    {
+        userFN = currentUser.FirstName;
+        faveColor = currentUser.FavoriteColor;
+    }
+
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <ul class="nav navbar-nav">
+            <li>
+                @* Updated below - doesn't show full email *@
+                @*@Html.ActionLink("Hi " + User.Identity.GetUserName().Substring(0, location), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
+                @Html.ActionLink($"Hi {userFN}", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage",
+                style = $"color: {faveColor}; text-shadow: 1px 1px #000;"} )
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
     }
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
