--- a/StoreFront3.0.UI.MVC/Views/Home/SingleItem.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/Home/SingleItem.cshtml
@@ -4,12 +4,15 @@
 
 <body class="goto-here">
 
-    
+
     <section class="ftco-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5 ftco-animate">
-                    <a href="images/product-1.jpg" class="image-popup"><img src="images/product-1.jpg" class="img-fluid" alt="Colorlib Template"></a>
+                
+
+                        <a href="images/product-1.jpg" class="image-popup"><img src="~/Content/images/" class="img-fluid" alt=""></a>
+                    
                 </div>
                 <div class="col-lg-6 product-details pl-md-5 ftco-animate">
                     <h3>Bell Pepper</h3>
@@ -176,7 +179,8 @@
                     </div>
                 </div>
             </div>
-</section>
+        </div>
+    </section>
 
     <section>
         <script>
