--- a/StoreFront3.0.UI.MVC/Views/ShoppingCart/Index.cshtml
+++ b/StoreFront3.0.UI.MVC/Views/ShoppingCart/Index.cshtml
@@ -25,7 +25,7 @@ else
 {
     <table class="table">
         <tr>
-            <th>Book Cover</th>
+            <th>Product Image</th>
             <th>Quantity</th>
             <th>Title</th>
             <th>Price</th>
@@ -37,7 +37,7 @@ else
         {
             <tr>
                 <td>
-                    <img src="~/Content/images/" alt="Book cover" 
+                    <img src="~/Content/images/" alt="Product Image" 
                          title="@item.Value.Product.ProductName" />
                 </td>
                 <td>
